# backtesting-app

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  app.py  docker-compose.override.yml  docker-compose.yml  markets_mapping.json  pyproject.toml  readme.md  requirements-dev.txt  requirements.txt  strategies.py.example  style.css  utils.py
.github/workflows/: deploy.yml
src/: app.py  charts.py  compute.py  data.py  logger.py  style.css  style.py  utils.py
