[project]
name = "backtesting-app"
version = "0.1.0"
description = ""
readme = "readme.md"
requires-python = ">=3.10"
dependencies = [
  "matplotlib==3.8.2",
  "pandas>=2.2.3",
  "pandas-ta==0.3.14b0",
  "pendulum==3.0.0",
  "plotly==5.18.0",
  "python-dotenv==1.0.1",
  "setuptools>=75.8.0",
  "streamlit==1.28.1",
]


[dependency-groups]
dev = [
 "pre-commit>=4.1.0",
 "ruff>=0.9.4",
]

[tool.ruff]
target-version = "py310"
exclude = []

[tool.ruff.lint]
select = [
  "E",  # pycodestyle errors
  "W",  # pycodestyle warnings
  "F",  # pyflakes
  "I",  # isort
  "B",  # flake8-bugbear
  "C4", # flake8-comprehensions
  "UP", # pyupgrade
]
ignore = [
  "B904", # Allow raising exceptions without from err, for HTTPException
  "B008", # do not perform function calls in argument defaults
]
# Disable fix for unused imports (`F401`).
unfixable = ["F401"]
