[project]
name = "backtesting-app"
version = "0.1.0"
description = ""
readme = "readme.md"
requires-python = ">=3.12"

[tool.ruff]
target-version = "py310"
exclude = []

[tool.ruff.lint]
select = [
  "E",  # pycodestyle errors
  "W",  # pycodestyle warnings
  "F",  # pyflakes
  "I",  # isort
  "B",  # flake8-bugbear
  "C4", # flake8-comprehensions
  "UP", # pyupgrade
]
ignore = [
  "B904", # Allow raising exceptions without from err, for HTTPException
  "B008", # do not perform function calls in argument defaults
]
# Disable fix for unused imports (`F401`).
unfixable = ["F401"]
